<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerCategoriaCubismo"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Categoria: Cubismo"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center"
        />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- PRIMER ARTICULO -->
            <ImageView
                android:id="@+id/img_ic_001_cubismo"
                android:layout_width="250sp"
                android:layout_height="150sp"
                android:src="@drawable/ic_cubismo_001"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/titulo_ic_001_cubismo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ic_cubismo_001_obra"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/descrip_ic_001_cubismo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ic_cubismo_001_detalle"
                android:textColor="#4A4848"
                android:textSize="15sp"
                android:textStyle="italic" />
            <TextView
                android:id="@+id/precio_ic_001_cubismo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Q9.99"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:textColor="#ED0909"
                />
            <Button
                android:id="@+id/btn_ic_001_cubismo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ADQUIRIR"
                android:layout_gravity="center"
                />

            <!-- SEGUNDO ARTICULO -->
            <ImageView
                android:id="@+id/img_ic_002_cubismo"
                android:layout_width="250sp"
                android:layout_height="150sp"
                android:layout_marginTop="40sp"
                android:src="@drawable/ic_cubismo_002"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/titulo_ic_002_cubismo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ic_cubismo_002_obra"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/descrip_ic_002_cubismo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ic_cubismo_002_detalle"
                android:textColor="#4A4848"
                android:textSize="15sp"
                android:textStyle="italic" />
            <TextView
                android:id="@+id/precio_ic_002_cubismo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Q9.99"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:textColor="#ED0909"
                />
            <Button
                android:id="@+id/btn_ic_002_cubismo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ADQUIRIR"
                android:layout_gravity="center"
                />

            <!-- TERCER ARTICULO -->
            <ImageView
                android:id="@+id/img_ic_003_cubismo"
                android:layout_width="250sp"
                android:layout_height="150sp"
                android:layout_marginTop="35sp"
                android:src="@drawable/ic_cubismo_003"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/titulo_ic_003_cubismo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ic_cubismo_003_obra"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/descrip_ic_003_cubismo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ic_cubismo_003_detalle"
                android:textColor="#4A4848"
                android:textSize="15sp"
                android:textStyle="italic" />
            <TextView
                android:id="@+id/precio_ic_003_cubismo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Q9.99"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:textColor="#ED0909"
                />
            <Button
                android:id="@+id/btn_ic_003_cubismo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ADQUIRIR"
                android:layout_gravity="center"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>